1. try runtime annotation for scan 2. add a class for annotation on compiler